--- a/r4ds.scss
+++ b/r4ds.scss
@@ -9,8 +9,12 @@ $white: #FFFFFF;
 $lavender: #dcd0ff;
 $purple: #4B006E;
 $black: #000D0D;
-
-$primary: #AFD5F6 !default;
+$red: #FF0000;
+$cornflower: #AFD5F6 !default;
+$toc-font-size:	12px;
+$toc-font-color: $white;
+$h1-font-size: 10px;
+$h2-font-size: 12px;
 
 /*-- scss:rules --*/
 
@@ -18,17 +22,18 @@ $primary: #AFD5F6 !default;
 $navbar-bg: $navy; // navbar
 $navbar-fg: $white; // navbar foreground elements
 $navbar-hl: $lavender; // highlight color when hovering over navbar links
-$body-bg: $white; // page background 
-$body-color: $navy; // page text 
-$footer-bg: $white // footer 
-$link-color: $purple; // hyperlinks 
+$body-bg: $white; // page background
+$body-color: $navy; // page text
+$footer-bg: $white // footer
+$link-color: $purple; // hyperlinks
 
 // Inline code
-$code-bg: $cream; // inline code background color
+$code-bg: $red; // inline code background color
 $code-color: $black; // inline code text color
 
 // Code blocks
-$code-block-bg: $light pink; // code block background color
+$code-block-bg: $light-pink; // code block background color
+
 
 .sidebar-title {
   color: #AFD5F6;
@@ -53,12 +58,12 @@ $code-block-bg: $light pink; // code block background color
   background-color: #FFFFFF!important;
   color: #000080!important;
 }*/
-/* 
+/*
 .book .book-body .page-wrapper .page-inner section.normal a:active,.book .book-body .page-wrapper .page-inner section.normal a:focus,.book .book-body .page-wrapper .page-inner section.normal a:hover {
     outline: 0;
     text-decoration: underline
 }*/
-  
+
 #quarto-content .quarto-sidebar-toggle {
     background: #000080 !important;
 }
@@ -123,7 +128,7 @@ code a:any-link {
     grid-row: content-top/content-bottom;
     align-content: flex-start
     color: #364149!important;
-    
+
 }
 
 pre {
