--- a/css/git.css
+++ b/css/git.css
@@ -12,7 +12,7 @@ th, td {
     color: black;
 }
 
-/* 
+/*
 .book.font-size-2 .book-body .page-inner section {
   font-size: 12px;
 }
@@ -85,7 +85,7 @@ background-color: #000080;
   margin-bottom: 0.5em;
 }
 details[open] summary {
-  
+
   font-size: 12px!important;
   background-color: #E8D6FF;
   color: #000080;
@@ -94,9 +94,9 @@ details[open] summary {
 }
 
 .book .book-body .page-wrapper .page-inner section.normal *{
-  
+
   font-size: 12px!important;
-  
+
 }
 
 code span.do {
@@ -113,7 +113,7 @@ p code {
   word-break: normal;
   /* word-wrap: normal;*/
   font-size: 12px!important;
-  border: 1px solid black!important;
+  border: 2px solid black!important;
   white-space: pre-wrap;
   background: #E7E1FB!important;
 }
@@ -124,7 +124,11 @@ pre code {
   background-color: #E7E1FB!important;
 }
 
-
+.main-container {
+  max-width: 800px!important;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /*.book .book-body .page-wrapper .page-inner {
     max-width: 2500px !important;
@@ -132,7 +136,9 @@ pre code {
     padding: 5px 0 5px !important;
 }*/
 
-
+.book .book-body .page-wrapper .page-inner {
+  max-width: 95%;
+}
 /* for multi cols
 .cols {display: flex; } uncomment for flex column size
 .cols {display: grid; grid-template-columns: 30% 50% 20%;} for fixed column size */
@@ -176,7 +182,7 @@ dt {
 
 
 /* The next two rules make the horizontal line go straight across in top navbar */
-/* 
+/*
 .summary > li:first-child {
     height: 0px;
     padding-top: 10px;
@@ -212,7 +218,7 @@ h1.title {
 /*
 .level1 .header-section-number {
   display: inline-block;
- 
+
 }
 */
 /*
@@ -260,7 +266,7 @@ h1.title {
     /*
 .book .book-header.fixed { position: fixed; right: 0px; top: 0px; left: 0px; border-bottom: 1px solid rgba(0, 0, 0, 0.07); }
 
-span.search-highlight { 
+span.search-highlight {
 background-color: rgb(255, 255, 136); }
 @media (min-width: 600px) {
   .book.with-summary .book-header.fixed { left: 300px; }
@@ -322,7 +328,7 @@ background-color: #000080:!important;
 */
 
 /*
-.book .book-header.fixed { 
+.book .book-header.fixed {
   left: 250px!important;
    color: #FFFFFF!important;
 background-color: #000080:!important;
@@ -338,12 +344,12 @@ background-color: #000080:!important;
 
 /*
 .book .book-header {
- 
+
   font-size: 0.85em;
     left: 250px!important;
   color: #FFFFFF!important;
    background: #000080!important;
-  
+
 }
 
 
@@ -358,41 +364,41 @@ background-color: #000080:!important;
   position: relative;
   font-size: 14px;
   box-shadow: none!important;
-  
+
 }
 
 
-.book .book-header .btn:hover { 
-  position: relative; 
-  text-decoration: none;  
+.book .book-header .btn:hover {
+  position: relative;
+  text-decoration: none;
   color: rgb(68, 68, 68);
   background: #000080!important;
-  
+
 }
 
 */
 /*
-.book .book-header h1 {          margin: 0px; 
-    font-size: 20px; 
-    font-weight: 200; 
-    text-align: center; 
-    line-height: 50px; 
-    opacity: 0; 
-    padding-left: 200px;         padding-right: 200px;        transition: opacity 0.2s ease 0s; 
-    overflow: hidden; 
-    text-overflow: ellipsis;      white-space: nowrap; 
-  
+.book .book-header h1 {          margin: 0px;
+    font-size: 20px;
+    font-weight: 200;
+    text-align: center;
+    line-height: 50px;
+    opacity: 0;
+    padding-left: 200px;         padding-right: 200px;        transition: opacity 0.2s ease 0s;
+    overflow: hidden;
+    text-overflow: ellipsis;      white-space: nowrap;
+
 }
 
-.book .book-header h1 a, .book .book-header h1 a:hover { 
-    color: inherit; 
+.book .book-header h1 a, .book .book-header h1 a:hover {
+    color: inherit;
     text-decoration: none; }
 
 @media (max-width: 1000px) {
   .book .book-header h1 { display: none; }
 }
-.book .book-header h1 i { display: none; 
-  
+.book .book-header h1 i { display: none;
+
 }
 
 
@@ -417,14 +423,14 @@ background-color: #000080:!important;
 .book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active>a{
   color: #000080!important;
   background: #FFFFFF!important;
-  
+
 }
 /* this is the sidebar hover */
 .book .book-summary ul.summary li a:hover {
   color: #000080!important;
   background: #FFFFFF!important;
 }
-/* 
+/*
 .book .book-body {
     color: #FFFFFF!important;
     background: 000080!important;
@@ -432,7 +438,7 @@ background-color: #000080:!important;
 */
 
 body {
-   
+
     font-family: Arial, Helvetica, sans-serif!important;
     top: 0!important;
     color: #FFFFFF!important;
@@ -456,7 +462,7 @@ body {
     padding: 10px 15px;
     font-size: 12px!important;
     border-bottom: none;
-   
+
     text-overflow: ellipsis;
     white-space: wrap;
     position: relative;
@@ -478,33 +484,33 @@ body {
 }
 
 /*
-.book .book-summary { 
-  position: absolute; 
-top: 0px; 
-left: -250x; 
-bottom: 0px; 
-z-index: 1; 
-width: 250px; 
+.book .book-summary {
+  position: absolute;
+top: 0px;
+left: -250x;
+bottom: 0px;
+z-index: 1;
+width: 250px;
  color: #FFFFFF!important;
-    background: #000080!important; 
-border: 1px solid #000080!important; 
-transition: left 250ms ease 0s; 
-  
+    background: #000080!important;
+border: 1px solid #000080!important;
+transition: left 250ms ease 0s;
+
 }
 */
 
 /*
 .book .book-header, .book .book-summary { font-family: "Helvetica Neue"
 
-.book .book-summary ul.summary { 
-  position: absolute; inset: 0px; 
+.book .book-summary ul.summary {
+  position: absolute; inset: 0px;
    color: #FFFFFF!important;
     background: #000080!important;
-  overflow-y: auto; 
-  list-style: none; margin: 0px; 
-  
-  padding: 0px; transition: top 0.5s ease 0s; 
-  
+  overflow-y: auto;
+  list-style: none; margin: 0px;
+
+  padding: 0px; transition: top 0.5s ease 0s;
+
 }
 */
 
@@ -512,12 +518,12 @@ transition: left 250ms ease 0s;
 
 /*
 .book .book-summary {
-    
+
     position:absolute;
-    
+
     font-size: 12px:!important;
     font-weight: bold!important;
-  
+
     top: 0;
     bottom: 0;
     z-index: 1;
@@ -570,7 +576,7 @@ transition: left 250ms ease 0s;
 
 /* The next two rules make the horizontal line go straight across in top navbar */
 
-/* 
+/*
 .summary > li:first-child {
     height: 50px;
     padding-top: 10px;
